# FastAPI-GO-Boilerplate

./: README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: custom.md
boilerplate_generator/: project_creator.py
